--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "aws-sdk": "^2.1215.0"
+    "@aws-sdk/client-s3": "^3.32.0"
   },
   "name": "test-s3-multipart-upload",
   "version": "1.0.1",
